--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -17,8 +17,8 @@
 
             <div class="in_cart_container">
 
+                {% for item in current_user.get_cart().get_products() %}
                 <div class="product_in_cart">
-                    {% for item in current_user.get_cart().get_products() %}
                     {% set product = item %}
                     <div class="prod_container">
                         <div class="cover"> <img
@@ -31,13 +31,13 @@
                         <div class="price">{{ product.get_discounted_price() }}</div>
                         <a href="/remove_from_cart/{{ current_user.get_id() }}/{{ product.get_id() }}"><button>Delete</button></a>
                     </div>
-                    {% endfor %}
                 </div>
+                {% endfor %}
 
                 <div class="summary_container">
                     <div class="price_container">
                         <div class="price_header">Summary</div>
-                        <div class="sum">{{ current_user.get_cart().calculate_total() }}</div>
+                        <div class="sum">{{'%0.2f'| format(current_user.get_cart().calculate_total()|float)}} B</div>
                     </div>
                     {% if current_user.get_cart().get_products() != [] %}
                     <div class="button_container">
