--- a/HTML/product.html
+++ b/HTML/product.html
@@ -43,11 +43,14 @@
             {% if product not in current_user.get_wish_list() %}
             <div class="addbtn add_wishlist"><a href="/add_to_wishlist/{{ product.get_id() }}">Add to wishlist</a></div>
             {% else %}
-            <div class="addbtn add_wishlist grey_addbtn"><a>Add to wishlist</a></div>
+            <div class="addbtn grey_addbtn"><a>In wishlist</a></div>
             {% endif %}
+        {% elif product not in current_user.get_library().get_all_products() %}
+        <a type="submit" class="addbtn grey_addbtn" disabled>In cart</a>
+        <div class="addbtn grey_addbtn"><a>In cart</a></div>
 				{% else %}
-					<a type="submit" class="addbtn grey_addbtn" disabled>Add to cart</a>
-					<div class="addbtn add_wishlist grey_addbtn"><a>Add to wishlist</a></div>
+					<a type="submit" class="addbtn grey_addbtn" disabled>Owned</a>
+					<div class="addbtn grey_addbtn"><a>Owned</a></div>
 				{% endif %}
 			</form>
 		
