<style>: decorate library

--- a/HTML/library.html
+++ b/HTML/library.html
@@ -3,8 +3,7 @@
     <head>
         <title>Library</title>
         <link rel="stylesheet" href="../Style/library.css?v=1">
-        <link rel="stylesheet" href="{{ url_for('Style', path='library.css?v=1')
-            }}">
+        <link rel="stylesheet" href="{{ url_for('Style', path='library.css?v=1')}}">
         <link rel="icon" type="image/png" href="../Icon/favicon.png">
     </head>
     <body>
