--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -63,10 +63,9 @@
                     <div class="screenshot heading">Screenshot</div>
                     {% if own_profile %}
                     <a class="pending heading" href="/pending_friend/{{ user.get_id() }}">Pending Friends</a>
-                    <a class="friends heading" href="/friend_list/{{ user.get_id }}">Friends</a>
-                    {% else %}
-                    <div class="friends heading">Friends</div>
                     {% endif %}
+                    <a class="friends heading" href="/friend_list/{{ user.get_id() }}">Friends</a>
+
                     <div class="friend_container">
                         {% set friend_length = user.get_friend_list()|length %}
                         {% for _ in range([friend_length,6]|min) %}
