--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="product.css" >
-	<link href="{{ url_for('Style', path='view_own_product.css?v=1') }}" rel="stylesheet">
+	<link rel="stylesheet" href="shop.css" >
+	<link href="{{ url_for('Style', path='shop.css?v=1') }}" rel="stylesheet">
 	<link rel="icon" type="image/png" href="../Icon/favicon.png">
 	<title>Steam</title>
 </head>
