<feat>: add method and api for modify/ delete product

--- a/HTML/add_product.html
+++ b/HTML/add_product.html
@@ -12,7 +12,7 @@
 
     <div class="wraper">
         <h2>Add New Product</h2>
-        <form action="/add_product_to_catalog" method="get">
+        <form action="/submit_product" method="get">
             <div class="container">
                 {% for key in product_info_keys %}
                     <h2>{{ key }}</h2>
