--- a/HTML/product.html
+++ b/HTML/product.html
@@ -38,19 +38,26 @@
 			<form class="right_col" action="/add_to_cart/{{ product.get_id() }}" method="get">
 				<div class="pricing">{{ product.get_discounted_price() }} THB</div>
 				<div class="pricing">  -{{  100 * product.get_discount() }}%</div>
-				{% if addable %}
-					<button type="submit" class="addbtn green_addbtn">Add to cart</button>
-            {% if product not in current_user.get_wish_list() %}
-            <div class="addbtn add_wishlist"><a href="/add_to_wishlist/{{ product.get_id() }}">Add to wishlist</a></div>
-            {% else %}
-            <div class="addbtn grey_addbtn"><a>In wishlist</a></div>
-            {% endif %}
-        {% elif product not in current_user.get_library().get_all_products() %}
-        <a type="submit" class="addbtn grey_addbtn" disabled>In cart</a>
-        <div class="addbtn grey_addbtn"><a>In cart</a></div>
+				{% if logged_in %}
+					{% if prod_in_user_cart %}
+						<button type="submit" class="addbtn grey_addbtn" disabled>Already in cart</button>
+					{% elif prod_in_library %}
+						<button type="submit" class="addbtn grey_addbtn" disabled>Already bought</button>
+					{% else %}
+						<button type="submit" class="addbtn green_addbtn">Add to cart</button>
+					{% endif %}
+					{% if prod_in_wish_list %}
+						<button class="addbtn grey_addbtn" disabled>
+							Already in wishlist
+						</button>
+					{% else %}
+						<button class="addbtn add_wishlist">
+							<a href="/add_to_wishlist/{{ product.get_id() }}">Add to wishlist</a>
+						</button>
+					{% endif %}
 				{% else %}
-					<a type="submit" class="addbtn grey_addbtn" disabled>Owned</a>
-					<div class="addbtn grey_addbtn"><a>Owned</a></div>
+					<button type="submit" class="addbtn grey_addbtn" disabled>Please Login</button>
+					<button class="addbtn grey_addbtn"><a>Please Login</a></button>
 				{% endif %}
 			</form>
 		
