<feat>: add system_requirement to product

--- a/HTML/product.html
+++ b/HTML/product.html
@@ -64,9 +64,8 @@
 		</div>
 		
 		<div class="sysreq_tab">
-		<!-- {% for lang in product["lang_sup"] %}
-			<h2>{{lang}}</h2>
-		{% endfor %} -->
+			<h2>System Requirement</h2>
+			{% include "Templates/system_req.html" %}
 		</div>
   </div>
 </body>
