--- a/HTML/product.html
+++ b/HTML/product.html
@@ -51,7 +51,7 @@
 					{% elif prod_in_user_cart %}		
 						<button class="addbtn grey_addbtn" disabled>Already in cart</button>
 					{% elif prod_in_library %}
-						<button class="addbtn grey_addbtn" disabled>Owned</button>
+						<button class="addbtn grey_addbtn" disabled>Already bought</button>
 					{% else %}
 						<a href="/add_to_wishlist/{{ product.get_id() }}"><button type="button" class="addbtn add_wishlist">Add to wishlist</button></a>
 					{% endif %}
